# Project-1

./: .coveragerc  .travis.yml  Jenkinsfile  README.md  fizz_buzz.py  pytest.ini  script1.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
my_python_learning_scripts/: __init__.py  fizz_buzz.py  script1.py
tests/: test_fizzbuzz.py  test_script1.py
