[metadata]
name = my_python_learning_scripts
author = Alexandru Avirvarei
author-email = alexandru.avi@gmail.com
summary = My python learning scripts
description-file = README.md
description-content-type = text/x-md; charset=UTF-8
home-page = https://github.com/Avirvarei/my-python-learning-scripts
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
requires-python = >=3.6
[files]
packages =
    my_python_learning_scripts
[entry_points]
console_scripts =
    fizz_buzz = my_python_learning_scripts.fizz_buzz:main
	script1 = my_python_learning_scripts.script1:main